[gd_scene load_steps=7 format=2]

[ext_resource path="res://game/gui/GUI.gd" type="Script" id=1]
[ext_resource path="res://game/gui/player1-charge-full.png" type="Texture" id=2]
[ext_resource path="res://game/gui/player2-charge-full.png" type="Texture" id=3]

[sub_resource type="DynamicFontData" id=1]

font_path = "res://fonts/Streamster.ttf"

[sub_resource type="DynamicFont" id=2]

size = 64
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]

size = 64
font_data = SubResource( 1 )

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
script = ExtResource( 1 )

[node name="Player1Box" type="VBoxContainer" parent="."]
margin_right = 64.0
margin_bottom = 375.0
custom_constants/separation = 25
__meta__ = {
"_edit_group_": true
}

[node name="Charge1" type="TextureRect" parent="Player1Box"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 2 )

[node name="Charge2" type="TextureRect" parent="Player1Box"]
margin_top = 89.0
margin_right = 64.0
margin_bottom = 153.0
texture = ExtResource( 2 )

[node name="Charge3" type="TextureRect" parent="Player1Box"]
margin_top = 178.0
margin_right = 64.0
margin_bottom = 242.0
texture = ExtResource( 2 )

[node name="Score" type="Label" parent="Player1Box"]
margin_top = 267.0
margin_right = 64.0
margin_bottom = 375.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1

[node name="Player2Box" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -64.0
margin_bottom = 375.0
grow_horizontal = 0
custom_constants/separation = 25
__meta__ = {
"_edit_group_": true
}

[node name="Charge1" type="TextureRect" parent="Player2Box"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )

[node name="Charge2" type="TextureRect" parent="Player2Box"]
margin_top = 89.0
margin_right = 64.0
margin_bottom = 153.0
texture = ExtResource( 3 )

[node name="Charge3" type="TextureRect" parent="Player2Box"]
margin_top = 178.0
margin_right = 64.0
margin_bottom = 242.0
texture = ExtResource( 3 )

[node name="Score" type="Label" parent="Player2Box"]
margin_top = 267.0
margin_right = 64.0
margin_bottom = 375.0
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1

